Bug 138955 - Assigning shortcut to action 'Properties' always brings 'General Properties', not selected object's properties
Summary: Assigning shortcut to action 'Properties' always brings 'General Properties',...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2006-12-18 11:46 UTC by Dexter Magnific
Modified: 2015-02-27 06:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.3 (KDE 14.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dexter Magnific 2006-12-18 11:46:06 UTC
Version:           1.5.5 (using KDE 3.5.5, Gentoo)
Compiler:          gcc version 3.4.6 (Gentoo 3.4.6-r1, ssp-3.4.5-1.0, pie-8.7.9)
OS:                Linux (i686) release 2.6.19-gentoo-r1

Hi,

I assigned a shortcut for "Properties" action, but when I press it, I always get the dialog for editing "General Settings". Umbrello seems to ignore the current selected object when invoking the properties dialog with a shortcut, not mouse
Comment 1 FiNeX 2009-08-09 15:48:52 UTC
on current trunk, the "properties" shortcut opens the current view properties, not the properties of the selected object.
Comment 2 Ralf Habacker 2015-02-26 22:53:05 UTC
This is because the mentioned shortcut "Properties" is implemented for the diagram properties.

see uml.cpp:489ff:
    viewProperties = actionCollection()->addAction(QLatin1String("view_properties"));
    viewProperties->setIcon(Icon_Utils::SmallIcon(Icon_Utils::it_Properties));
    viewProperties->setText(i18n("&Properties"));
    connect(viewProperties, SIGNAL(triggered(bool)), this, SLOT(slotCurrentViewProperties()));
Comment 3 Ralf Habacker 2015-02-26 22:58:21 UTC
Git commit 4868cf65dc97651750b5efa0363f73a26c9fee78 by Ralf Habacker.
Committed on 26/02/2015 at 22:50.
Pushed by habacker into branch 'Applications/14.12'.

Fix of 'Assigning shortcut to action "Properties" always brings "General Properties", not selected object's properties'.
FIXED-IN:2.15.3 (KDE 14.12.3)

M  +8    -4    umbrello/uml.cpp
M  +1    -1    umbrello/uml.h

http://commits.kde.org/umbrello/4868cf65dc97651750b5efa0363f73a26c9fee78
Comment 4 Ralf Habacker 2015-02-27 06:43:56 UTC
Git commit c293167c6a57b331ca2eefc70a2c17a0536283fd by Ralf Habacker.
Committed on 26/02/2015 at 22:50.
Pushed by habacker into branch 'master'.

Fix of 'Assigning shortcut to action "Properties" always brings "General Properties", not selected object's properties'.
FIXED-IN:2.15.3 (KDE 14.12.3)

M  +8    -4    umbrello/uml.cpp
M  +1    -1    umbrello/uml.h

http://commits.kde.org/umbrello/c293167c6a57b331ca2eefc70a2c17a0536283fd