Fix of 'Assigning shortcut to action "Properties" always brings "General Properties", not selected object's properties'.

BUG:138955
FIXED-IN:2.15.3 (KDE 14.12.3)